--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@500&display=swap');
 .navbar{
+    font-family: 'Raleway', sans-serif;
     background-color: #F3A024 ;
+}
+.navbar ul a{
+    font-weight: bold;
+    margin: auto 5px;
+    transition: background-color 0.3s ease, border-radius 0.3s ease;
+}
+.navbar ul a:hover{
+    background-color: white;
+    border-radius: 20px;
 }
 #home {
     height: 500px;
-    background-image: url('/img/heart.jpg');
+    background-image: url('/img/pharmacy.jpg');
     background-size: cover; /* o 'contain' según tus necesidades */
     background-position: center;
     background-repeat: no-repeat;
-    /* Agrega otras propiedades de estilo según sea necesario */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#container-home {
+    margin: auto 100px !important;
+    font-family: 'Raleway', sans-serif;
+    padding: 20px;
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+
 }
