--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     border-radius: 20px;
 }
 #home {
-    height: 500px;
+    height: 1100px;
     background-image: url('/img/pharmacy.jpg');
     background-size: cover; /* o 'contain' según tus necesidades */
     background-position: center;
@@ -28,6 +28,9 @@
     font-family: 'Raleway', sans-serif;
     padding: 20px;
     border-radius: 20px;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(20px);
 
+}
+#about{
+    background-color: #F3A024;
 }
