--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 #home {
     height: 1100px;
-    background-image: url('/img/pharmacy.jpg');
+    background-image: url('img/pharmacy.jpg');
     background-size: cover; /* o 'contain' según tus necesidades */
     background-position: center;
     background-repeat: no-repeat;
