--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,20 @@
 
 }
 #services{
-    height: 600px;
+    height: 900px;
     background-image:url('/img/heart.jpg');
-    background-size: cover;
+    background-size:cover;
+}
+
+.cards{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+}
+.cards_reverse{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
 }
