--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,14 @@
     flex-wrap: wrap;
     gap: 5rem;
 }
+
+.card-body{
+    background-image: url('/img/anna.jpg');
+    background-size: cover;
+}
+.card{
+    transition: all 0.3s ease;
+}
+.card:hover{
+    transform: scale(1.1);
+}
